logs/dag_id=a_third_dag/run_id=manual__2022-11-10T17:59:44.186107+00:00/task_id=create_table/attempt=1.log
[2022-11-10T17:59:49.960+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.create_table manual__2022-11-10T17:59:44.186107+00:00 [queued]>
[2022-11-10T17:59:49.987+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.create_table manual__2022-11-10T17:59:44.186107+00:00 [queued]>
[2022-11-10T17:59:49.990+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T17:59:50.027+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-10T17:59:50.029+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T17:59:50.074+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2022-11-10 17:59:44.186107+00:00
[2022-11-10T17:59:50.091+0000] {standard_task_runner.py:55} INFO - Started process 10026 to run task
[2022-11-10T17:59:50.105+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'a_third_dag', 'create_table', 'manual__2022-11-10T17:59:44.186107+00:00', '--job-id', '44', '--raw', '--subdir', 'DAGS_FOLDER/third_dug.py', '--cfg-path', '/tmp/tmpzxah1iou']
[2022-11-10T17:59:50.107+0000] {standard_task_runner.py:83} INFO - Job 44: Subtask create_table
[2022-11-10T17:59:50.248+0000] {task_command.py:376} INFO - Running <TaskInstance: a_third_dag.create_table manual__2022-11-10T17:59:44.186107+00:00 [running]> on host 0b03955da713
[2022-11-10T17:59:50.496+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=a_third_dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-10T17:59:44.186107+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-10T17:59:44.186107+00:00
[2022-11-10T17:59:50.538+0000] {base.py:71} INFO - Using connection ID '***' for task execution.
[2022-11-10T17:59:50.555+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS pet (
            pet_id SERIAL PRIMARY KEY,
            date CURRENT_DATE(),
            price NUMERIC NOT NULL,
            pair VARCHAR NOT NULL,
            );
          , parameters: None
[2022-11-10T17:59:50.564+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_DATE"
LINE 4:             date CURRENT_DATE(),
                         ^

[2022-11-10T17:59:50.618+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=a_third_dag, task_id=create_table, execution_date=20221110T175944, start_date=20221110T175949, end_date=20221110T175950
[2022-11-10T17:59:50.664+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 44 for task create_table (syntax error at or near "CURRENT_DATE"
LINE 4:             date CURRENT_DATE(),
                         ^
; 10026)
[2022-11-10T17:59:50.723+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-10T17:59:50.805+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
